--- a/src/app/features/diagramas/pages/diagram-editor/diagram-editor.component.scss
+++ b/src/app/features/diagramas/pages/diagram-editor/diagram-editor.component.scss
@@ -19,8 +19,9 @@
 .editor-workspace {
   display: flex;
   flex-direction: row;
+  align-items: stretch;
   width: 100%;
-  flex: 1;
+  flex: 1 1 0%;
   overflow: hidden;
   min-height: 0;
   min-width: 0;
